[package]
name = "dive-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dive-deco = "1.3.2"
eframe = "0.27.2"
futures = "0.3.30"
quick-xml = {version = "0.31.0", features = ["serialize"] }
rfd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
